# spaceX

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
app/: config.py  dependencies.py  exceptions.py  main.py  models.py
app/routers/: cache.py  launches.py  launchpads.py  rockets.py  statistics.py
app/services/: cache.py  data.py  spacex_client.py  statistics.py
tests/: test_cache.py  test_filtering.py  test_root.py  test_spacex_client.py  test_statistics.py
