[project]
name = "spacex-launch-tracker"
version = "0.1.0"
description = "SpaceX Launch Tracker API - FastAPI backend consuming SpaceX v4 API"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.129",
  "uvicorn[standard]>=0.40",
  "httpx>=0.28",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
 "pytest-asyncio>=0.25",
 "respx>=0.22.0",
 "ruff>=0.9",
]

[tool.uv]
package = false

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
